--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,11 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^0.4.0+7
-  google_sign_in: ^4.0.4
-  firebase_auth: ^0.11.1+11
+  google_sign_in: ^4.0.7
+  firebase_auth: ^0.14.0+5
+  image_picker: 0.6.1+4
+  firebase_storage: 3.0.6
+  firebase_database: 3.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,9 +47,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/vegeta2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
